--- a/index.html
+++ b/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="dist/app.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | NFT preview card component</title>
+
+
 </head>
 <body>
 
-  Equilibrium #3429
+<div class="container">
 
-  Our Equilibrium collection promotes balance and calm.
+    <div class="image">
+        <a href="#" class="image-overlay">
+            <img src="images/image-equilibrium.jpg" alt="Equilibrium #3429"/>
+            <div class="overlay">
+<!--                <img src="images/icon-view.svg">-->
+            </div>
+        </a>
+    </div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+    <div class="description">
+        <h1><a href="#">Equilibrium #3429</a></h1>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        <p>
+            Our Equilibrium collection promotes balance and calm.
+        </p>
+
+        <div class="description__details">
+            <div class="price">
+                <img src="images/icon-ethereum.svg" />0.041 ETH
+            </div>
+
+            <div class="time">
+                <img src="images/icon-clock.svg" /> 3 days left
+            </div>
+        </div>
+    </div>
+
+    <div class="creator">
+        <img src="images/image-avatar.png" /> Creation of <a href="#" class="creator__name">Jules Wyvern</a>
+    </div>
+
+</div>
+
+<footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+</footer>
 </body>
 </html>
